[package]
name = "dinotreedemojni"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"

[dependencies]
axgeom = "1.2"
num_cpus = "*"
dinotreedemomenu = {path="../dinotreedemomenu"}
jni = { version = "0.10.2", default-features = false }
#[target.'cfg(target_os="android")'.dependencies]
#jni = { version = "0.9", default-features = false }
rayon ="1.2"
[lib]
name = "sample"
crate-type = ["staticlib", "cdylib"]

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
