[package]
name = "dinotreedemojni"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"

[dependencies]
axgeom = "1.2"
num_cpus = "*"
dinotreedemomenu = {git="https://github.com/tiby312/dinotreedemomenu.git"}
jni = { version = "0.10.2", default-features = false }
rayon ="1.2"


[patch.crates-io]
dinotree = {path="../dinotree_alg/dinotree"}

[patch.'https://github.com/tiby312/dinotreedemomenu']
dinotreedemomenu = {path="../dinotreedemomenu"}


[lib]
name = "sample"
crate-type = ["staticlib", "cdylib"]

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
